--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,26 @@
-<div>
+<!DOCTYPE html>
+<html lang="an">
+    <head>
+    <meta charset="UTF-8">  
+    <title>Studio</title> 
+    </head>
+    <body>
+        <header>
+            <a href="WebStudio"><h3>WebStudio</h3></a>
+            <nav>
+            <ul>
+                <li>Agencja</li>
+                <li>Portfolio</li>
+                <li>Kontakt</li>
+            </ul>
+            </nav> 
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="phone:+48111111111">(+48)111 111 111</a></li>
+            </ul>
+        </header>
+        <main>
+    <div>
     <ul> 
     <figure>
         <li><img src="images\Technocrack.jpg" 
