--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="an">
+<html lang="pl">
     <head>
     <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Studio</title> 
     </head>
     <body>
