--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Studio</title> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <style type="text/css"></style>
+    <link rel="stylesheet"href=".style.css">
     </head>
     <body>
         <header>
