--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <header>
-            <a href="WebStudio"><h3>WebStudio</h3></a>
+            <a href="index.html"><h3>WebStudio</h3></a>
             <nav>
             <ul>
-                <li>Agencja</li>
-                <li>Portfolio</li>
-                <li>Kontakt</li>
+                <li><a href="">Agencja</a></li>
+                <li><a href="/portfolio.html"></a> Portfolio</a></li>
+                <li><a href="">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
