--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ non sodales dui. Interdum et malesuada
         <section>
         <h2>Czym się zajmujemy</h2>
             <ul>
-                <li><img src="first.jpg" 
+                <li><img src="images/first.jpg" 
                 alt="pisanie kodu"
                 width="370"
                 height="294"></li>
