--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ non sodales dui. Interdum et malesuada
                 alt="pisanie kodu"
                 width="370"
                 height="294"></li>
-                <li><img src="second.jpg" 
+                <li><img src="images/second.jpg" 
                 alt="ustawianie grafiki w telefonie"
                 width="370"
                 height="294"></li>
