--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@ non sodales dui. Interdum et malesuada
         <section>
         <h2>Czym się zajmujemy</h2>
             <ul>
-                <li><img src="images/first.jpg" 
+                <li><img src="images\first.jpg" 
                 alt="pisanie kodu"
                 width="370"
                 height="294"></li>
-                <li><img src="images/second.jpg" 
+                <li><img src="images\second.jpg" 
                 alt="ustawianie grafiki w telefonie"
                 width="370"
                 height="294"></li>
-                <li><img src="third.jpg" 
+                <li><img src="" 
                 alt="paleta kolorów"
                 width="370"
                 height="294"></li>
