--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ non sodales dui. Interdum et malesuada
                 alt="ustawianie grafiki w telefonie"
                 width="370"
                 height="294"></li>
-                <li><img src="" 
+                <li><img src="images\third.jpg" 
                 alt="paleta kolorów"
                 width="370"
                 height="294"></li>
