--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ non sodales dui. Interdum et malesuada
         <h2>Nasz zespół</h2>
            <ul> 
             <figure>
-                <li><img src="Product Designer.jpg" 
+                <li><img src="images\Product Designer.jpg" 
                 alt="Product Designer"
                 width="270"
                 height="260"></li>
