--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ non sodales dui. Interdum et malesuada
             </figcaption>
             </figure>
             <figure>
-                <li><img src="Frontend Developer.jpg" 
+                <li><img src="images\Frontend Developer.jpg" 
                 alt="Frontend Developer"
                 width="270"
                 height="260"></li>
@@ -102,8 +102,8 @@ non sodales dui. Interdum et malesuada
             </figcaption>
             </figure>
             <figure>
-                <li><img src="Marketing.jpg" 
-                alt="Frontend Developer"
+                <li><img src="images\Marketing.jpg" 
+                alt="Marketing"
                 width="270"
                 height="260"></li>
             <figcaption>
