--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ non sodales dui. Interdum et malesuada
             </figcaption>
             </figure>
             <figure>
-                <li><img src="UI Designer.jpg" 
-                alt="Frontend Developer"
+                <li><img src="images\UI Designer.jpg" 
+                alt="UI Designer"
                 width="270"
                 height="260"></li>
             <figcaption>
