--- a/portfolio.html
+++ b/portfolio.html
@@ -147,4 +147,18 @@
 </div>
 </main>
 <footer>
-<a href="index.html"><h3>WebStudio</h3></a>   
+<a href="index.html"><h3>WebStudio</h3></a>  
+</footer>
+</body>
+<footer>
+<address>
+m. Warszawa, Aleje Jerozolimskie 21
+</address>
+<address>
+<a href="mailto:info@example.com">info@example.com</a>
+</address>
+<address>
+<a href="phone:+48111111111">(+48)111 111 111</a>
+</address>
+</footer>
+</html> 
