--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             <nav>
             <ul>
                 <li><a href="">Agencja</a></li>
-                <li><a href="/portfolio.html"></a> Portfolio</a></li>
+                <li><a href="index.html">Portfolio</a></li>
                 <li><a href="">Kontakt</a></li>
             </ul>
             </nav> 
