--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <a href="index.html"><h3>WebStudio</h3></a>
+            <a href="WebStudio"><h3>WebStudio</h3></a>
             <nav>
             <ul>
                 <li><a href="">Agencja</a></li>
