--- a/portfolio.html
+++ b/portfolio.html
@@ -14,14 +14,14 @@
             <a href="WebStudio"><h3>WebStudio</h3></a>
             <nav>
             <ul>
-                <li><a href="">Agencja</a></li>
-                <li><a href="index.html">Portfolio</a></li>
-                <li><a href="">Kontakt</a></li>
+                <li><a class="link" href="">Agencja</a></li>
+                <li><a class="link" href="index.html">Portfolio</a></li>
+                <li><a class="link" href="">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
