--- a/portfolio.html
+++ b/portfolio.html
@@ -7,11 +7,11 @@
     <title>Portfolio</title> 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <style type="text/css"></style>
-    <link rel="stylesheet"href=".style.css">
+    <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <header>
-            <a href="WebStudio"><h3>WebStudio</h3></a>
+            <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
             <nav>
             <ul>
                 <li><a class="link" href="">Agencja</a></li>
