--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Studio</title> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <style type="text/css"></style>
+    <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <header>
-            <a href="WebStudio"><h3>WebStudio</h3></a>
+            <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
             <nav>
             <ul>
-                <li><a href="">Agencja</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="">Kontakt</a></li>
+                <li><a class="link" href="">Agencja</a></li>
+                <li><a class="link" href="portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
         <section>
             <h1>EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
-            <button type="button">Zamów usługe</button> 
+            <button class="button">Zamów usługe</button> 
         </section>
         <section>
             <ul>
@@ -129,7 +132,7 @@ non sodales dui. Interdum et malesuada
         </section>
         </main>
         <footer>
-        <a href="WebStudio"><h3>WebStudio</h3></a>
+        <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
         </footer>
     </body>
     <footer>
