--- a/index.html
+++ b/index.html
@@ -30,35 +30,32 @@
             <button class="button">Zamów usługe</button> 
         </section>
         <section>
-            <ul>
-                <li><strong>LOREM IPSUM</strong>
+            <div class="columns">
+                <strong>LOREM IPSUM</strong>
                     <pre>
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                    </pre>                    
-                </li>
-                <li><strong>LOREM IPSUM</strong>
+                    </pre>  
+                <strong>LOREM IPSUM</strong>
                     <pre>
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                     </pre>
-                </li>
-                <li><strong>LOREM IPSUM</strong>
+                <strong>LOREM IPSUM</strong>
                     <pre>
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                     </pre>                    
-                </li>
-                <li><strong>LOREM IPSUM</strong>
+                <strong>LOREM IPSUM</strong>
                     <pre>
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                     </pre>                    
-                </li>
+            </div>
         </section>
         <section>
         <h2>Czym się zajmujemy</h2>
