--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </ul>
         </header>
         <main>
-        <section>
+        <section class="button1">
             <h1>EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
-            <button class="button">Zamów usługe</button> 
+            <button class="button" type="button">Zamów usługe</button> 
         </section>
         <section>
             <div class="columns">
