--- a/portfolio.html
+++ b/portfolio.html
@@ -25,11 +25,11 @@
             </ul>
         </header>
         <main>
-            <button class="button">Wszystkie</button> 
-            <button class="button">Strony</button> 
-            <button class="button">Aplikacje</button> 
-            <button class="button">Dizajn</button> 
-            <button class="button">Marketing</button> 
+            <button class="button" type="button">Wszystkie</button> 
+            <button class="button" type="button">Strony</button> 
+            <button class="button" type="button">Aplikacje</button> 
+            <button class="button" type="button">Dizajn</button> 
+            <button class="button" type="button">Marketing</button> 
     <div>
     <ul> 
     <figure>
