--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
         <main>
         <section class="button1">
-            <h1>EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
+            <h1 class="center">EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
             <button class="button" type="button">Zamów usługe</button> 
         </section>
         <section>
