--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ non sodales dui. Interdum et malesuada
             </div>
         </section>
         <section>
-        <h2>Czym się zajmujemy</h2>
+        <h2 class="center">Czym się zajmujemy</h2>
             <ul>
                 <li><img src="images\first.jpg" 
                 alt="pisanie kodu"
@@ -75,7 +75,7 @@ non sodales dui. Interdum et malesuada
             </ul>
         </section>    
         <section>
-        <h2>Nasz zespół</h2>
+        <h2 class="center">Nasz zespół</h2>
            <ul> 
             <figure>
                 <li><img src="images\Product Designer.jpg" 
