--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
             <nav>
             <ul>
-                <li><a class="link" href="">Agencja</a></li>
+                <li><a class="link" id="nav" href="">Agencja</a></li>
                 <li><a class="link" href="portfolio.html">Portfolio</a></li>
                 <li><a class="link" href="">Kontakt</a></li>
             </ul>
