--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" id="nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
