--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
             <nav>
             <ul>
-                <li><a class="link" id="nav" href="">Agencja</a></li>
+                <li><a class="link" href="">Agencja</a></li>
                 <li><a class="link" href="portfolio.html">Portfolio</a></li>
                 <li><a class="link" href="">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" id="nav" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
