--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="link" id="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" id="contacts" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
@@ -160,10 +160,10 @@
 m. Warszawa, Aleje Jerozolimskie 21
     </address>
     <address>
-    <a href="mailto:info@example.com">info@example.com</a>
+    <a id="contacts" href="mailto:info@example.com">info@example.com</a>
     </address>
     <address>
-    <a href="phone:+48111111111">(+48)111 111 111</a>
+    <a id="contacts" href="phone:+48111111111">(+48)111 111 111</a>
     </address>
 </footer>
 </html> 
