--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="link" id="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" id="contacts" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
@@ -85,7 +85,7 @@ non sodales dui. Interdum et malesuada
             <figcaption>
                 <ul>
                     <li>John Doe </li>
-                    <li>Product Designer</li>
+                    <li class="figcaption">Product Designer</li>
                 </ul>
             </figcaption>
             </figure>
@@ -97,7 +97,7 @@ non sodales dui. Interdum et malesuada
             <figcaption>
                 <ul>
                     <li>John Doe</li>
-                    <li>Frontend Developer</li>
+                    <li class="figcaption">Frontend Developer</li>
                 </ul>
             </figcaption>
             </figure>
@@ -109,7 +109,7 @@ non sodales dui. Interdum et malesuada
             <figcaption>
                 <ul>
                     <li>John Doe</li>
-                    <li>Marketing</li>
+                    <li class="figcaption">Marketing</li>
                 </ul>
             </figcaption>
             </figure>
@@ -121,7 +121,7 @@ non sodales dui. Interdum et malesuada
             <figcaption>
                 <ul>
                     <li>John Doe</li>
-                    <li>UI Designer</li>
+                    <li class="figcaption">UI Designer</li>
                 </ul>
             </figcaption>
             </figure>
@@ -137,10 +137,10 @@ non sodales dui. Interdum et malesuada
         m. Warszawa, Aleje Jerozolimskie 21
     </address>
     <address>
-        <a href="mailto:info@example.com">info@example.com</a>
+        <a id="contacts" href="mailto:info@example.com">info@example.com</a>
     </address>
     <address>
-        <a href="phone:+48111111111">(+48)111 111 111</a>
+        <a id="contacts" href="phone:+48111111111">(+48)111 111 111</a>
     </address>
     </footer>
 </html>
