--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <figcaption>
             <ul>
                 <li>Technocrack</li>
-                <li>Strona internetowa</li>
+                <li class="figcaption">Strona internetowa</li>
             </ul>
         </figcaption>
         </figure>
@@ -52,7 +52,7 @@
         <figcaption>
             <ul>
                 <li>Grafika New Orlean vs Golden Star</li>
-                <li>Dizajn</li>
+                <li class="figcaption">Dizajn</li>
             </ul>
         </figcaption>
         </figure>
@@ -64,7 +64,7 @@
         <figcaption>
             <ul>
                 <li>Restauracja Seafood</li>
-                <li>Aplikacja</li>
+                <li class="figcaption">Aplikacja</li>
             </ul>
         </figcaption>
         </figure>
@@ -80,7 +80,7 @@
         <figcaption>
             <ul>
                 <li>Projekt Prime</li>
-                <li>Marketing</li>
+                <li class="figcaption">Marketing</li>
             </ul>
         </figcaption>
         </figure>
@@ -92,7 +92,7 @@
         <figcaption>
             <ul>
                 <li>Projekt Boxes</li>
-                <li>Aplikacja</li>
+                <li class="figcaption">Aplikacja</li>
             </ul>
         </figcaption>
         </figure>
@@ -104,7 +104,7 @@
         <figcaption>
             <ul>
                 <li>Inspiration has no Borders</li>
-                <li>Strona internetowa</li>
+                <li class="figcaption">Strona internetowa</li>
             </ul>
         </figcaption>
         </figure>
@@ -120,7 +120,7 @@
         <figcaption>
             <ul>
                 <li>Magazyn Limited Edition</li>
-                <li>Dizajn</li>
+                <li class="figcaption">Dizajn</li>
             </ul>
         </figcaption>
         </figure>
@@ -132,7 +132,7 @@
         <figcaption>
             <ul>
                 <li>Projekt LAB</li>
-                <li>Marketing</li>
+                <li class="figcaption">Marketing</li>
             </ul>
         </figcaption>
         </figure>
@@ -144,7 +144,7 @@
         <figcaption>
             <ul>
                 <li>Growing Business</li>
-                <li>Aplikacja</li>
+                <li class="figcaption">Aplikacja</li>
             </ul>
         </figcaption>
         </figure>
