--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@ non sodales dui. Interdum et malesuada
         m. Warszawa, Aleje Jerozolimskie 21
     </address>
     <address>
-        <a id="contacts" href="mailto:info@example.com">info@example.com</a>
+        <a class="link" id="contacts" href="mailto:info@example.com">info@example.com</a>
     </address>
     <address>
-        <a id="contacts" href="phone:+48111111111">(+48)111 111 111</a>
+        <a class="link" id="contacts" href="phone:+48111111111">(+48)111 111 111</a>
     </address>
     </footer>
 </html>
