--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="button" type="button">Zamów usługe</button> 
         </section>
         <section>
-            <div class="columns">
+            <div class="align-left">
                 <strong>LOREM IPSUM</strong>
                     <pre>
 Lorem ipsum dolor sit amet, consectetur
