--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
+            <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
             <nav>
             <ul>
                 <li><a class="link" href="">Agencja</a></li>
@@ -20,37 +20,37 @@
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" id="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" id="contacts" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
         <section class="button1">
-            <h1 class="center">EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
+            <h1 class="text-heading">EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
             <button class="button" type="button">Zamów usługe</button> 
         </section>
         <section>
             <div class="align-left">
-                <strong>LOREM IPSUM</strong>
-                    <pre>
+                <strong class="text-post">LOREM IPSUM</strong>
+                    <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                     </pre>  
-                <strong>LOREM IPSUM</strong>
-                    <pre>
+                <strong class="text-post">LOREM IPSUM</strong>
+                    <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                     </pre>
-                <strong>LOREM IPSUM</strong>
-                    <pre>
+                <strong class="text-post">LOREM IPSUM</strong>
+                    <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                     </pre>                    
-                <strong>LOREM IPSUM</strong>
-                    <pre>
+                <strong class="text-post">LOREM IPSUM</strong>
+                    <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
@@ -58,7 +58,7 @@ non sodales dui. Interdum et malesuada
             </div>
         </section>
         <section>
-        <h2 class="center">Czym się zajmujemy</h2>
+        <h2 class="text-heading2">Czym się zajmujemy</h2>
             <ul>
                 <li><img src="images\first.jpg" 
                 alt="pisanie kodu"
@@ -75,7 +75,7 @@ non sodales dui. Interdum et malesuada
             </ul>
         </section>    
         <section>
-        <h2 class="center">Nasz zespół</h2>
+        <h2 class="text-heading2">Nasz zespół</h2>
            <ul> 
             <figure>
                 <li><img src="images\Product Designer.jpg" 
@@ -84,8 +84,8 @@ non sodales dui. Interdum et malesuada
                 height="260"></li>
             <figcaption>
                 <ul>
-                    <li>John Doe </li>
-                    <li class="figcaption">Product Designer</li>
+                    <li class="text-figcaption">John Doe </li>
+                    <li class="text-figcaption1">Product Designer</li>
                 </ul>
             </figcaption>
             </figure>
@@ -96,8 +96,8 @@ non sodales dui. Interdum et malesuada
                 height="260"></li>
             <figcaption>
                 <ul>
-                    <li>John Doe</li>
-                    <li class="figcaption">Frontend Developer</li>
+                    <li class="text-figcaption">John Doe</li>
+                    <li class="text-figcaption1">Frontend Developer</li>
                 </ul>
             </figcaption>
             </figure>
@@ -108,8 +108,8 @@ non sodales dui. Interdum et malesuada
                 height="260"></li>
             <figcaption>
                 <ul>
-                    <li>John Doe</li>
-                    <li class="figcaption">Marketing</li>
+                    <li class="text-figcaption">John Doe</li>
+                    <li class="text-figcaption1">Marketing</li>
                 </ul>
             </figcaption>
             </figure>
@@ -120,8 +120,8 @@ non sodales dui. Interdum et malesuada
                 height="260"></li>
             <figcaption>
                 <ul>
-                    <li>John Doe</li>
-                    <li class="figcaption">UI Designer</li>
+                    <li class="text-figcaption">John Doe</li>
+                    <li class="text-figcaption1">UI Designer</li>
                 </ul>
             </figcaption>
             </figure>
@@ -129,18 +129,18 @@ non sodales dui. Interdum et malesuada
         </section>
         </main>
         <footer>
-        <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
+        <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
         </footer>
     </body>
-    <footer>
+    <footer class="text-adres">
     <address>
         m. Warszawa, Aleje Jerozolimskie 21
     </address>
     <address>
-        <a class="link" id="contacts" href="mailto:info@example.com">info@example.com</a>
+        <a class="link" href="mailto:info@example.com">info@example.com</a>
     </address>
     <address>
-        <a class="link" id="contacts" href="phone:+48111111111">(+48)111 111 111</a>
+        <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
     </address>
     </footer>
 </html>
