--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header>
-            <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
+            <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
             <nav>
             <ul>
                 <li><a class="link" href="">Agencja</a></li>
@@ -20,8 +20,8 @@
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" id="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" id="contacts" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
@@ -39,8 +39,8 @@
             height="294"></li>
         <figcaption>
             <ul>
-                <li>Technocrack</li>
-                <li class="figcaption">Strona internetowa</li>
+                <li class="text-figcaption2">Technocrack</li>
+                <li class="text-figcaption3">Strona internetowa</li>
             </ul>
         </figcaption>
         </figure>
@@ -51,8 +51,8 @@
             height="294"></li>
         <figcaption>
             <ul>
-                <li>Grafika New Orlean vs Golden Star</li>
-                <li class="figcaption">Dizajn</li>
+                <li class="text-figcaption2">Grafika New Orlean vs Golden Star</li>
+                <li class="text-figcaption3">Dizajn</li>
             </ul>
         </figcaption>
         </figure>
@@ -63,8 +63,8 @@
             height="294"></li>
         <figcaption>
             <ul>
-                <li>Restauracja Seafood</li>
-                <li class="figcaption">Aplikacja</li>
+                <li  class="text-figcaption2">Restauracja Seafood</li>
+                <li class="text-figcaption3">Aplikacja</li>
             </ul>
         </figcaption>
         </figure>
@@ -79,8 +79,8 @@
             height="294"></li>
         <figcaption>
             <ul>
-                <li>Projekt Prime</li>
-                <li class="figcaption">Marketing</li>
+                <li class="text-figcaption2">Projekt Prime</li>
+                <li class="text-figcaption3">Marketing</li>
             </ul>
         </figcaption>
         </figure>
@@ -91,8 +91,8 @@
             height="294"></li>
         <figcaption>
             <ul>
-                <li>Projekt Boxes</li>
-                <li class="figcaption">Aplikacja</li>
+                <li class="text-figcaption2">Projekt Boxes</li>
+                <li class="text-figcaption3">Aplikacja</li>
             </ul>
         </figcaption>
         </figure>
@@ -103,8 +103,8 @@
                 height="294"></li>
         <figcaption>
             <ul>
-                <li>Inspiration has no Borders</li>
-                <li class="figcaption">Strona internetowa</li>
+                <li class="text-figcaption2">Inspiration has no Borders</li>
+                <li class="text-figcaption3">Strona internetowa</li>
             </ul>
         </figcaption>
         </figure>
@@ -119,8 +119,8 @@
                 height="294"></li>
         <figcaption>
             <ul>
-                <li>Magazyn Limited Edition</li>
-                <li class="figcaption">Dizajn</li>
+                <li class="text-figcaption2">Magazyn Limited Edition</li>
+                <li class="text-figcaption3">Dizajn</li>
             </ul>
         </figcaption>
         </figure>
@@ -131,8 +131,8 @@
                 height="294"></li>
         <figcaption>
             <ul>
-                <li>Projekt LAB</li>
-                <li class="figcaption">Marketing</li>
+                <li class="text-figcaption2">Projekt LAB</li>
+                <li class="text-figcaption3">Marketing</li>
             </ul>
         </figcaption>
         </figure>
@@ -143,8 +143,8 @@
                     height="294"></li>
         <figcaption>
             <ul>
-                <li>Growing Business</li>
-                <li class="figcaption">Aplikacja</li>
+                <li class="text-figcaption2">Growing Business</li>
+                <li class="text-figcaption3">Aplikacja</li>
             </ul>
         </figcaption>
         </figure>
@@ -152,7 +152,7 @@
         </div>
     </main>
     <footer>
-        <a href="index.html"><h3>WebStudio</h3></a>  
+        <a class="link" href="WebStudio"><h3>WebStudio</h3></a>  
     </footer>
 </body>
 <footer>
