--- a/index.html
+++ b/index.html
@@ -26,49 +26,49 @@
         </header>
         <main>
         <section class="button1">
-            <h1 class="text-heading">EFEKTYWNE ROZWIĄZANIA </br>DLA WASZEGO BIZNESU</h1> 
+            <h1 class="text-heading">EFEKTYWNE ROZWIĄZANIA <br>DLA WASZEGO BIZNESU</h1> 
             <button class="button" type="button">Zamów usługe</button> 
         </section>
         <section>
             <div class="align-left">
                 <strong class="text-post">LOREM IPSUM</strong>
-                    <pre class="text-post1">
+                <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                    </pre>  
+                </pre>  
                 <strong class="text-post">LOREM IPSUM</strong>
-                    <pre class="text-post1">
+                <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                    </pre>
+                </pre>
                 <strong class="text-post">LOREM IPSUM</strong>
-                    <pre class="text-post1">
+                <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                    </pre>                    
+                </pre>                    
                 <strong class="text-post">LOREM IPSUM</strong>
-                    <pre class="text-post1">
+                <pre class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                    </pre>                    
+                </pre>                    
             </div>
         </section>
         <section>
         <h2 class="text-heading2">Czym się zajmujemy</h2>
             <ul>
-                <li><img src="images\first.jpg" 
+                <li><img src="images/first.jpg" 
                 alt="pisanie kodu"
                 width="370"
                 height="294"></li>
-                <li><img src="images\second.jpg" 
+                <li><img src="images/second.jpg" 
                 alt="ustawianie grafiki w telefonie"
                 width="370"
                 height="294"></li>
-                <li><img src="images\third.jpg" 
+                <li><img src="images/third.jpg" 
                 alt="paleta kolorów"
                 width="370"
                 height="294"></li>
@@ -76,56 +76,58 @@ non sodales dui. Interdum et malesuada
         </section>    
         <section>
         <h2 class="text-heading2">Nasz zespół</h2>
-           <ul> 
             <figure>
-                <li><img src="images\Product Designer.jpg" 
-                alt="Product Designer"
-                width="270"
-                height="260"></li>
-            <figcaption>
-                <ul>
-                    <li class="text-figcaption">John Doe </li>
-                    <li class="text-figcaption1">Product Designer</li>
-                </ul>
-            </figcaption>
+                <img 
+                    src="images/Product Designer.jpg" 
+                    alt="Product Designer"
+                    width="270"
+                    height="260">
+                <figcaption>
+                    <ul>
+                        <li class="text-figcaption">John Doe </li>
+                        <li class="text-figcaption1">Product Designer</li>
+                    </ul>
+                </figcaption>
             </figure>
             <figure>
-                <li><img src="images\Frontend Developer.jpg" 
-                alt="Frontend Developer"
-                width="270"
-                height="260"></li>
-            <figcaption>
+                <img 
+                    src="images/Frontend Developer.jpg" 
+                    alt="Frontend Developer"
+                    width="270"
+                    height="260">
+                <figcaption>
                 <ul>
                     <li class="text-figcaption">John Doe</li>
                     <li class="text-figcaption1">Frontend Developer</li>
                 </ul>
-            </figcaption>
+                </figcaption>
             </figure>
             <figure>
-                <li><img src="images\Marketing.jpg" 
+                <img 
+                src="images/Marketing.jpg" 
                 alt="Marketing"
                 width="270"
-                height="260"></li>
-            <figcaption>
+                height="260">
+                <figcaption>
                 <ul>
                     <li class="text-figcaption">John Doe</li>
                     <li class="text-figcaption1">Marketing</li>
                 </ul>
-            </figcaption>
+                </figcaption>
             </figure>
             <figure>
-                <li><img src="images\UI Designer.jpg" 
+                <img 
+                src="images/UI Designer.jpg" 
                 alt="UI Designer"
                 width="270"
-                height="260"></li>
-            <figcaption>
+                height="260">
+                <figcaption>
                 <ul>
                     <li class="text-figcaption">John Doe</li>
                     <li class="text-figcaption1">UI Designer</li>
                 </ul>
-            </figcaption>
+                </figcaption>
             </figure>
-            </ul>
         </section>
         </main>
         <footer>
