--- a/index.html
+++ b/index.html
@@ -134,15 +134,15 @@ non sodales dui. Interdum et malesuada
         <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
         </footer>
     </body>
-    <footer class="text-adres">
-    <address>
+    <footer>
+        <address>
         m. Warszawa, Aleje Jerozolimskie 21
-    </address>
-    <address>
+        </address>
+        <address>
         <a class="link" href="mailto:info@example.com">info@example.com</a>
-    </address>
-    <address>
+        </address>
+        <address>
         <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
-    </address>
+        </address>
     </footer>
 </html>
