--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ non sodales dui. Interdum et malesuada
         <h2 class="text-heading2">Nasz zespół</h2>
             <figure>
                 <img 
-                    src="images/ProductDesigner.jpg" 
+                    src="images/Product Designer.jpg" 
                     alt="Product Designer"
                     width="270"
                     height="260">
@@ -91,7 +91,7 @@ non sodales dui. Interdum et malesuada
             </figure>
             <figure>
                 <img 
-                    src="images/FrontendDeveloper.jpg" 
+                    src="images/Frontend Developer.jpg"
                     alt="Frontend Developer"
                     width="270"
                     height="260">
@@ -117,7 +117,7 @@ non sodales dui. Interdum et malesuada
             </figure>
             <figure>
                 <img 
-                src="images/UIDesigner.jpg" 
+                src="images/UI Designer.jpg" 
                 alt="UI Designer"
                 width="270"
                 height="260">
