--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@ non sodales dui. Interdum et malesuada
         </footer>
     </body>
     <footer>
-        <address>
+        <address class="text-adres">
         m. Warszawa, Aleje Jerozolimskie 21
         </address>
-        <address>
+        <address class="text-adres">
         <a class="link" href="mailto:info@example.com">info@example.com</a>
         </address>
-        <address>
+        <address class="text-adres">
         <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
         </address>
     </footer>
