--- a/portfolio.html
+++ b/portfolio.html
@@ -156,14 +156,14 @@
     </footer>
 </body>
 <footer>
-    <address>
-m. Warszawa, Aleje Jerozolimskie 21
+    <address class="text-adres">
+        m. Warszawa, Aleje Jerozolimskie 21
     </address>
-    <address>
-    <a id="contacts" href="mailto:info@example.com">info@example.com</a>
+    <address class="text-adres">
+        <a class="link" href="mailto:info@example.com">info@example.com</a>
     </address>
-    <address>
-    <a id="contacts" href="phone:+48111111111">(+48)111 111 111</a>
+    <address class="text-adres">
+        <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
     </address>
 </footer>
 </html> 
