--- a/index.html
+++ b/index.html
@@ -31,30 +31,30 @@
         </section>
         <section>
             <div class="align-left">
-                <strong class="text-post">LOREM IPSUM</strong>
-                <pre class="text-post1">
+                <h3 class="text-post">LOREM IPSUM</h3>
+                <p class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                </pre>  
-                <strong class="text-post">LOREM IPSUM</strong>
-                <pre class="text-post1">
+                </p>  
+                <h3 class="text-post">LOREM IPSUM</h3>
+                <p class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                </pre>
-                <strong class="text-post">LOREM IPSUM</strong>
-                <pre class="text-post1">
+                </p>  
+                <h3 class="text-post">LOREM IPSUM</h3>
+                <p class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                </pre>                    
-                <strong class="text-post">LOREM IPSUM</strong>
-                <pre class="text-post1">
+                </p>                     
+                <h3 class="text-post">LOREM IPSUM</h3>
+                <p class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
-                </pre>                    
+                </p>                     
             </div>
         </section>
         <section>
@@ -132,17 +132,15 @@ non sodales dui. Interdum et malesuada
         </main>
         <footer>
         <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
+        <address class="text-adres">
+            m. Warszawa, Aleje Jerozolimskie 21
+            </address>
+            <address class="text-adres">
+            <a class="link" href="mailto:info@example.com">info@example.com</a>
+            </address>
+            <address class="text-adres">
+            <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
+            </address>
         </footer>
     </body>
-    <footer>
-        <address class="text-adres">
-        m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <address class="text-adres">
-        <a class="link" href="mailto:info@example.com">info@example.com</a>
-        </address>
-        <address class="text-adres">
-        <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
-        </address>
-    </footer>
 </html>
