--- a/index.html
+++ b/index.html
@@ -83,10 +83,8 @@ non sodales dui. Interdum et malesuada
                     width="270"
                     height="260">
                 <figcaption>
-                    <ul>
-                        <li class="text-figcaption">John Doe </li>
-                        <li class="text-figcaption1">Product Designer</li>
-                    </ul>
+                    <h3 class="text-figcaption">John Doe</h3>
+                    <p class="text-figcaption1">Product Designer</p>
                 </figcaption>
             </figure>
             <figure>
@@ -96,10 +94,8 @@ non sodales dui. Interdum et malesuada
                     width="270"
                     height="260">
                 <figcaption>
-                <ul>
-                    <li class="text-figcaption">John Doe</li>
-                    <li class="text-figcaption1">Frontend Developer</li>
-                </ul>
+                    <h3 class="text-figcaption">John Doe</h3>
+                    <p class="text-figcaption1">Frontend Developer</p>
                 </figcaption>
             </figure>
             <figure>
@@ -109,10 +105,8 @@ non sodales dui. Interdum et malesuada
                 width="270"
                 height="260">
                 <figcaption>
-                <ul>
-                    <li class="text-figcaption">John Doe</li>
-                    <li class="text-figcaption1">Marketing</li>
-                </ul>
+                    <h3 class="text-figcaption">John Doe</h3>
+                    <p class="text-figcaption1">Marketing</p>
                 </figcaption>
             </figure>
             <figure>
@@ -122,10 +116,8 @@ non sodales dui. Interdum et malesuada
                 width="270"
                 height="260">
                 <figcaption>
-                <ul>
-                    <li class="text-figcaption">John Doe</li>
-                    <li class="text-figcaption1">UI Designer</li>
-                </ul>
+                    <h3 class="text-figcaption">John Doe</h3>
+                    <p class="text-figcaption1">UI Designer</p>
                 </figcaption>
             </figure>
         </section>
