--- a/portfolio.html
+++ b/portfolio.html
@@ -31,124 +31,102 @@
             <button class="button" type="button">Dizajn</button> 
             <button class="button" type="button">Marketing</button> 
         <div>
-         <ul> 
         <figure>
-            <li><img src="images\Technocrack.jpg" 
+            <img src="images\Technocrack.jpg" 
             alt="Technocrack"
             width="370"
-            height="294"></li>
+            height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Technocrack</li>
-                <li class="text-figcaption3">Strona internetowa</li>
+                <h3 class="text-figcaption2">Technocrack</h3>
+                <p class="text-figcaption3">Strona internetowa</p>
             </ul>
         </figcaption>
         </figure>
         <figure>
-            <li><img src="images\Grafika New Orlean vs Golden Star.jpg" 
+            <img src="images\Grafika New Orlean vs Golden Star.jpg" 
             alt="Grafika New Orlean vs Golden Star"
             width="370"
-            height="294"></li>
+            height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Grafika New Orlean vs Golden Star</li>
-                <li class="text-figcaption3">Dizajn</li>
-            </ul>
+                <h3 class="text-figcaption2">Grafika New Orlean vs Golden Star</h3>
+                <p class="text-figcaption3">Dizajn</p>
         </figcaption>
         </figure>
         <figure>
-            <li><img src="images\Restauracja Seafood.jpg" 
+            <img src="images\Restauracja Seafood.jpg" 
             alt="Restauracja Seafood"
             width="370"
-            height="294"></li>
+            height="294">
         <figcaption>
-            <ul>
-                <li  class="text-figcaption2">Restauracja Seafood</li>
-                <li class="text-figcaption3">Aplikacja</li>
-            </ul>
+                <h3 class="text-figcaption2">Restauracja Seafood</h3>
+                <p class="text-figcaption3">Aplikacja</p>
         </figcaption>
         </figure>
-        </ul>
         </div> 
         <div>
-        <ul> 
         <figure>          
-            <li><img src="images\Projekt Prime.jpg" 
+            <img src="images\Projekt Prime.jpg" 
             alt="Projekt Prime"
             width="370"
-            height="294"></li>
+            height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Projekt Prime</li>
-                <li class="text-figcaption3">Marketing</li>
-            </ul>
+                <h3 class="text-figcaption2">Projekt Prime</h3>
+                <p class="text-figcaption3">Marketing</p>
         </figcaption>
         </figure>
         <figure>          
-            <li><img src="images\Projekt Boxes.jpg" 
+            <img src="images\Projekt Boxes.jpg" 
             alt="Projekt Boxes"
             width="370"
-            height="294"></li>
+            height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Projekt Boxes</li>
-                <li class="text-figcaption3">Aplikacja</li>
-            </ul>
+                <h3 class="text-figcaption2">Projekt Boxes</h3>
+                <p class="text-figcaption3">Aplikacja</p>
         </figcaption>
         </figure>
         <figure>          
-            <li><img src="images\Inspiration has no Borders.jpg" 
+            <img src="images\Inspiration has no Borders.jpg" 
                 alt="Inspiration has no Borders"
                 width="370"
-                height="294"></li>
+                height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Inspiration has no Borders</li>
-                <li class="text-figcaption3">Strona internetowa</li>
-            </ul>
+                <h3 class="text-figcaption2">Inspiration has no Borders</h3>
+                <p class="text-figcaption3">Strona internetowa</p>
         </figcaption>
-        </figure>
-        </ul>    
+        </figure> 
         </div>
         <div>
-        <ul> 
         <figure>          
-            <li><img src="images\Magazyn Limited Edition.jpg" 
+            <img src="images\Magazyn Limited Edition.jpg" 
                 alt="Magazyn Limited Edition"
                 width="370"
-                height="294"></li>
+                height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Magazyn Limited Edition</li>
-                <li class="text-figcaption3">Dizajn</li>
+                <h3 class="text-figcaption2">Magazyn Limited Edition</h3>
+                <p class="text-figcaption3">Dizajn</p>
             </ul>
         </figcaption>
         </figure>
         <figure>          
-            <li><img src="images\Projekt LAB.jpg" 
+            <img src="images\Projekt LAB.jpg" 
                 alt="Projekt LAB"
                 width="370"
-                height="294"></li>
+                height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Projekt LAB</li>
-                <li class="text-figcaption3">Marketing</li>
-            </ul>
+                <h3 class="text-figcaption2">Projekt LAB</h3>
+                <p class="text-figcaption3">Marketing</p>
         </figcaption>
         </figure>
         <figure>          
-            <li><img src="images\Growing Business.jpg" 
+            <img src="images\Growing Business.jpg" 
                     alt="Growing Business"
                     width="370"
-                    height="294"></li>
+                    height="294">
         <figcaption>
-            <ul>
-                <li class="text-figcaption2">Growing Business</li>
-                <li class="text-figcaption3">Aplikacja</li>
-            </ul>
+                <h3 class="text-figcaption2">Growing Business</h3>
+                <p class="text-figcaption3">Aplikacja</p>
         </figcaption>
-        </figure>
-        </ul>    
+        </figure>    
         </div>
     </main>
     <footer>
