--- a/index.html
+++ b/index.html
@@ -11,26 +11,25 @@
     </head>
     <body>
         <header>
-            <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
+            <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="black">Studio</span></h3></a>
             <nav>
             <ul>
-                <li><a class="link" href="">Agencja</a></li>
-                <li><a class="link" href="portfolio.html">Portfolio</a></li>
-                <li><a class="link" href="">Kontakt</a></li>
+                <li><a href="" class="blue">Agencja</a></li>
+                <li><a href="portfolio.html" class="black">Portfolio</a></li>
+                <li><a href="" class="black">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a href="mailto:info@devstudio.com" class="blue">info@devstudio.com</a></li>
+                <li><a href="phone:+48111111111" class="grey">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
-        <section class="button1">
+        <section class="button1 area">
             <h1 class="text-heading">EFEKTYWNE ROZWIĄZANIA <br>DLA WASZEGO BIZNESU</h1> 
             <button class="button" type="button">Zamów usługe</button> 
         </section>
-        <section>
-            <div class="align-left">
+        <section class="align-left">
                 <h3 class="text-post">LOREM IPSUM</h3>
                 <p class="text-post1">
 Lorem ipsum dolor sit amet, consectetur
@@ -55,7 +54,6 @@ Lorem ipsum dolor sit amet, consectetur
 adipiscing elit. Nam vel arcu sem. Sed
 non sodales dui. Interdum et malesuada
                 </p>                     
-            </div>
         </section>
         <section>
         <h2 class="text-heading2">Czym się zajmujemy</h2>
@@ -74,8 +72,8 @@ non sodales dui. Interdum et malesuada
                 height="294"></li>
             </ul>
         </section>    
-        <section>
-        <h2 class="text-heading2">Nasz zespół</h2>
+        <section class="area2">
+        <h2 class="text-heading2">Nasz zespół</h2> 
             <figure>
                 <img 
                     src="images/Product Designer.jpg" 
@@ -86,7 +84,7 @@ non sodales dui. Interdum et malesuada
                     <h3 class="text-figcaption">John Doe</h3>
                     <p class="text-figcaption1">Product Designer</p>
                 </figcaption>
-            </figure>
+            </figure> 
             <figure>
                 <img 
                     src="images/Frontend Developer.jpg"
@@ -122,16 +120,16 @@ non sodales dui. Interdum et malesuada
             </figure>
         </section>
         </main>
-        <footer>
-        <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
-        <address class="text-adres">
+        <footer class="area">
+            <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="white">Studio</span></h3></a>
+            <address class="text-adres white">
             m. Warszawa, Aleje Jerozolimskie 21
             </address>
-            <address class="text-adres">
-            <a class="link" href="mailto:info@example.com">info@example.com</a>
+            <address>
+            <a href="mailto:info@example.com" class="text-adres color-adres">info@example.com</a>
             </address>
-            <address class="text-adres">
-            <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
+            <address>
+            <a href="phone:+48111111111" class="text-adres color-adres">(+48)111 111 111</a>
             </address>
         </footer>
     </body>
