--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,17 @@
     </head>
     <body>
         <header>
-            <a class="link" href="WebStudio"><h3 class="text-logo">WebStudio</h3></a>
+            <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="black">Studio</span></h3></a>
             <nav>
             <ul>
-                <li><a class="link" href="">Agencja</a></li>
-                <li><a class="link" href="index.html">Portfolio</a></li>
-                <li><a class="link" href="">Kontakt</a></li>
+                <li><a href="index.html" class="black">Agencja</a></li>
+                <li><a href="" class="blue">Portfolio</a></li>
+                <li><a href="" class="black">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="phone:+48111111111">(+48)111 111 111</a></li>
+                <li><a class="grey" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="grey" href="phone:+48111111111">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
@@ -30,7 +30,7 @@
             <button class="button" type="button">Aplikacje</button> 
             <button class="button" type="button">Dizajn</button> 
             <button class="button" type="button">Marketing</button> 
-        <div>
+        <section>
         <figure>
             <img src="images\Technocrack.jpg" 
             alt="Technocrack"
@@ -62,8 +62,6 @@
                 <p class="text-figcaption3">Aplikacja</p>
         </figcaption>
         </figure>
-        </div> 
-        <div>
         <figure>          
             <img src="images\Projekt Prime.jpg" 
             alt="Projekt Prime"
@@ -94,8 +92,6 @@
                 <p class="text-figcaption3">Strona internetowa</p>
         </figcaption>
         </figure> 
-        </div>
-        <div>
         <figure>          
             <img src="images\Magazyn Limited Edition.jpg" 
                 alt="Magazyn Limited Edition"
@@ -104,7 +100,6 @@
         <figcaption>
                 <h3 class="text-figcaption2">Magazyn Limited Edition</h3>
                 <p class="text-figcaption3">Dizajn</p>
-            </ul>
         </figcaption>
         </figure>
         <figure>          
@@ -127,19 +122,19 @@
                 <p class="text-figcaption3">Aplikacja</p>
         </figcaption>
         </figure>    
-        </div>
+        </section>
     </main>
-    <footer>
-        <a class="link" href="WebStudio"><h3>WebStudio</h3></a>
-        <address class="text-adres">
-            m. Warszawa, Aleje Jerozolimskie 21
+    <footer class="area">
+        <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="white">Studio</span></h3></a>
+        <address class="text-adres white">
+        m. Warszawa, Aleje Jerozolimskie 21
         </address>
-        <address class="text-adres">
-            <a class="link" href="mailto:info@example.com">info@example.com</a>
+        <address>
+        <a href="mailto:info@example.com" class="text-adres color-adres">info@example.com</a>
         </address>
-        <address class="text-adres">
-            <a class="link" href="phone:+48111111111">(+48)111 111 111</a>
-        </address>  
+        <address>
+        <a href="phone:+48111111111" class="text-adres color-adres">(+48)111 111 111</a>
+        </address>
     </footer>
     </body>
 </html> 
