--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="black">Studio</span></h3></a>
             <nav>
             <ul>
-                <li><a href="" class="blue">Agencja</a></li>
-                <li><a href="portfolio.html" class="black">Portfolio</a></li>
-                <li><a href="" class="black">Kontakt</a></li>
+                <li><a href="" class="black link">Agencja</a></li>
+                <li><a href="portfolio.html link" class="black link">Portfolio</a></li>
+                <li><a href="" class="black link">Kontakt</a></li>
             </ul>
             </nav> 
             <ul>
-                <li><a href="mailto:info@devstudio.com" class="blue">info@devstudio.com</a></li>
-                <li><a href="phone:+48111111111" class="grey">(+48)111 111 111</a></li>
+                <li><a href="mailto:info@devstudio.com" class="grey link">info@devstudio.com</a></li>
+                <li><a href="phone:+48111111111" class="grey link">(+48)111 111 111</a></li>
             </ul>
         </header>
         <main>
@@ -126,10 +126,10 @@ non sodales dui. Interdum et malesuada
             m. Warszawa, Aleje Jerozolimskie 21
             </address>
             <address>
-            <a href="mailto:info@example.com" class="text-adres color-adres">info@example.com</a>
+            <a href="mailto:info@example.com" class="text-adres color-adres link">info@example.com</a>
             </address>
             <address>
-            <a href="phone:+48111111111" class="text-adres color-adres">(+48)111 111 111</a>
+            <a href="phone:+48111111111" class="text-adres color-adres link">(+48)111 111 111</a>
             </address>
         </footer>
     </body>
