--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="WebStudio"><h3 class="text-logo"><span class="blue">Web</span><span class="black">Studio</span></h3></a>
             <nav>
             <ul>
-                <li><a href="" class="black link">Agencja</a></li>
+                <li><a href="index.html" class="black link">Agencja</a></li>
                 <li><a href="portfolio.html link" class="black link">Portfolio</a></li>
                 <li><a href="" class="black link">Kontakt</a></li>
             </ul>
