--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
             <nav>
             <ul>
                 <li><a href="index.html" class="black link">Agencja</a></li>
-                <li><a href="" class="black link">Portfolio</a></li>
+                <li><a href="portfolio.html" class="black link">Portfolio</a></li>
                 <li><a href="" class="black link">Kontakt</a></li>
             </ul>
             </nav> 
