--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ non sodales dui. Interdum et malesuada
         </section>    
         <section class="area2">
         <h2 class="text-heading2">Nasz zespół</h2> 
-            <figure>
+            <ul>
+                <li><figure>
                 <img 
                     src="images/Product Designer.jpg" 
                     alt="Product Designer"
@@ -84,8 +85,8 @@ non sodales dui. Interdum et malesuada
                     <h3 class="text-figcaption">John Doe</h3>
                     <p class="text-figcaption1">Product Designer</p>
                 </figcaption>
-            </figure> 
-            <figure>
+                </figure></li>
+                <li><figure>
                 <img 
                     src="images/Frontend Developer.jpg"
                     alt="Frontend Developer"
@@ -95,8 +96,8 @@ non sodales dui. Interdum et malesuada
                     <h3 class="text-figcaption">John Doe</h3>
                     <p class="text-figcaption1">Frontend Developer</p>
                 </figcaption>
-            </figure>
-            <figure>
+            </figure></li>
+            <li><figure>
                 <img 
                 src="images/Marketing.jpg" 
                 alt="Marketing"
@@ -106,8 +107,8 @@ non sodales dui. Interdum et malesuada
                     <h3 class="text-figcaption">John Doe</h3>
                     <p class="text-figcaption1">Marketing</p>
                 </figcaption>
-            </figure>
-            <figure>
+            </figure></li>
+            <li><figure>
                 <img 
                 src="images/UI Designer.jpg" 
                 alt="UI Designer"
@@ -117,7 +118,8 @@ non sodales dui. Interdum et malesuada
                     <h3 class="text-figcaption">John Doe</h3>
                     <p class="text-figcaption1">UI Designer</p>
                 </figcaption>
-            </figure>
+            </figure></li>
+        </ul>
         </section>
         </main>
         <footer class="area">
