--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@ non sodales dui. Interdum et malesuada
         <h2 class="text-heading2">Nasz zespół</h2> 
             <ul>
                 <li><figure>
-                <img 
-                    src="images/Product Designer.jpg" 
+                <img src="images/Product Designer.jpg" 
                     alt="Product Designer"
                     width="270"
                     height="260">
@@ -87,8 +86,7 @@ non sodales dui. Interdum et malesuada
                 </figcaption>
                 </figure></li>
                 <li><figure>
-                <img 
-                    src="images/Frontend Developer.jpg"
+                <img src="images/Frontend Developer.jpg"
                     alt="Frontend Developer"
                     width="270"
                     height="260">
@@ -98,8 +96,7 @@ non sodales dui. Interdum et malesuada
                 </figcaption>
             </figure></li>
             <li><figure>
-                <img 
-                src="images/Marketing.jpg" 
+                <img src="images/Marketing.jpg" 
                 alt="Marketing"
                 width="270"
                 height="260">
@@ -109,8 +106,7 @@ non sodales dui. Interdum et malesuada
                 </figcaption>
             </figure></li>
             <li><figure>
-                <img 
-                src="images/UI Designer.jpg" 
+                <img src="images/UI Designer.jpg" 
                 alt="UI Designer"
                 width="270"
                 height="260">
