--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ non sodales dui. Interdum et malesuada
         <h2 class="text-heading2">Nasz zespół</h2> 
             <ul>
                 <li><figure>
-                <img src="images/Product Designer.jpg" 
+                <img src="images/ProductDesigner.jpg" 
                     alt="Product Designer"
                     width="270"
                     height="260">
@@ -86,7 +86,7 @@ non sodales dui. Interdum et malesuada
                 </figcaption>
                 </figure></li>
                 <li><figure>
-                <img src="images/Frontend Developer.jpg"
+                <img src="images/FrontendDeveloper.jpg"
                     alt="Frontend Developer"
                     width="270"
                     height="260">
@@ -106,7 +106,7 @@ non sodales dui. Interdum et malesuada
                 </figcaption>
             </figure></li>
             <li><figure>
-                <img src="images/UI Designer.jpg" 
+                <img src="images/UIDesigner.jpg" 
                 alt="UI Designer"
                 width="270"
                 height="260">
